--- a/app/elements/fee-report-service/fee-report-service.html
+++ b/app/elements/fee-report-service/fee-report-service.html
@@ -534,7 +534,7 @@
         var obj={"schoolid":"","fromdate":"","todate":""};
         obj.schoolid=localStorage.getItem("schoolid");
         obj.fromdate=localStorage.getItem("localsess_from_date");
-        // obj.todate=localStorage.getItem("localsess_to_date");
+        obj.todate=localStorage.getItem("localsess_to_date");
         var d=new Date();
         var mn=(d.getMonth()+1);
         var dt=d.getDate();
@@ -568,6 +568,7 @@
         {
           arr=[];
           document.querySelector('pdccheques-report-card').pdcarr=arr;
+          document.querySelector('pdccheques-report-card').FnRefresh();
         }
       },
       FnFetchDiscountStructureService:function(admissionyear
