--- a/app/elements/pdccheques-report-card/pdccheques-report-card.html
+++ b/app/elements/pdccheques-report-card/pdccheques-report-card.html
@@ -14,11 +14,11 @@
             <div class="col-md-12">
               <!-- <div class="col-md-6"> -->
                 <div class="col-md-2" style="margin-top: 2%;">
-                  <fromdate-icon-pickercard></fromdate-icon-pickercard>
+                  <pdc-icon-fromdatepicker></pdc-icon-fromdatepicker>
                 </div>
-                <!-- <div class="col-md-1" style="margin-top: 2%;margin-left: -3%;"> -->
-                  <!-- <todate-icon-pickercard></todate-icon-pickercard> -->
-                <!-- </div> -->
+                <div class="col-md-1" style="margin-top: 2%;margin-left: -3%;">
+                  <todate-icon-pickercard></todate-icon-pickercard>
+                </div>
                 <div class="col-md-1" style="margin-top: 2.5%;margin-left: 10%;">
                   <paper-button style="height:30px;text-transform: none;" on-click="FnView" class="btn btn-primary">View</paper-button>
                 </div>
@@ -86,6 +86,11 @@
       },
       FnView:function(){
         this.$.feereportservice.FnFetchPDCService();
+      },
+      FnRefresh:function(){
+        this.pdcarr=[];
+        this.totalcollection=0;
+        this.noofstudents=0;
       }
     });
   })();
