bounce cancel check

--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -1009,6 +1009,7 @@
       },
       FnBounceProcessing:function(){
         document.querySelector('app-list').setPage("chequebounceorcancel-card","Cheque Bounce / Cancel");
+        document.querySelector('chequebounceorcancel-card').FnRefresh();
         document.querySelector('chequebounceorcancel-card').callService();
       },
       FnTprealisation:function(){
