--- a/app/elements/chequebounceorcancel-card/chequebounceorcancel-card.html
+++ b/app/elements/chequebounceorcancel-card/chequebounceorcancel-card.html
@@ -13,7 +13,7 @@
               <!-- <div class="col-md-6"> -->
                 <div class="col-md-3" style="margin-top: -1%;">
                    <paper-input  label="Student Name" is="" value="{{value}}" on-keydown="FnSearchEnquiry"></paper-input>
-                   <paper-listbox class="dropdown-content" id="input1" on-iron-select="FnSelectEnquiry">
+                   <paper-listbox class="dropdown-content" id="chequebouncecancelinput1" on-iron-select="FnSelectEnquiry">
                    <template is="dom-repeat" items="{{itemArray}}" as="item">
                    <paper-item value="{{item.admission_no}}">{{item.itemdes}}</paper-item>
                    </template>
@@ -37,16 +37,16 @@
           </div>
         </div>
     </div>
-     <div>
+     <div >
       <table class="table table-hover" id="bounceprocessreport">
       <thead>
       <tr>
-        <th>Sno</th><th>Enr/Enq No</th><th>Student Name</th><th>Grade</th><th>Installment Type</th><th>Cheque No</th><th>Bank Name</th><th>Date</th><th>Amount</th><th>Bounce</th><th>Cancel</th>
+        <th>Sno</th><th>Enr/Enq No</th><th>Student Name</th><th>Grade</th><th style="text-align: right;">Installment Type</th><th style="text-align: right;">Cheque No</th><th style="text-align: right;">Bank Name</th><th style="text-align: right;">Cheque Date</th><th style="text-align: right;">Amount</th><th style="text-align: right;">Bounce</th><th style="text-align: center;">Cancel</th>
       </tr>
       <tr>
-      <td colspan="10">
+      <td colspan="12">
         <template  is="dom-repeat" items="{{chequearr}}" as="item">
-        <chequebounceorcancel-item-card sno="{{item.sno}}" enrno="{{item.admission_no}}" studentname="{{item.student_name}}" grade="{{item.grade}}" installmenttype="{{item.installment_type}}" chequeno="{{item.cheque_no}}" bankname="{{item.bank_name}}" paiddate="{{item.paid_date}}" installmentamount="{{item.installment_amount}}"></chequebounceorcancel-item-card>
+        <chequebounceorcancel-item-card sno="{{item.sno}}" enrno="{{item.admission_no}}" studentname="{{item.student_name}}" grade="{{item.grade}}" installmenttype="{{item.installment_type}}" chequeno="{{item.cheque_no}}" bankname="{{item.bank_name}}" paiddate="{{item.cheque_date}}" installmentamount="{{item.installment_amount}}"></chequebounceorcancel-item-card>
         </template>
       </td>
       </tr>
@@ -65,7 +65,7 @@
     Polymer({
       is: 'chequebounceorcancel-card',
       ready:function(){
-        this.querySelector('paper-listbox').style.visibility='hidden';
+        this.querySelector('#chequebouncecancelinput1').style.visibility='hidden';
       },
       FnSetChequeArray:function(arr){
         allchequesarr=arr;
@@ -108,22 +108,22 @@
 
       FnSearchEnquiry:function(e){
       if(e.keyCode==13|| e.keyCode==40)
-      this.querySelector('paper-listbox').focus();
+      this.querySelector('#chequebouncecancelinput1').focus();
       var arr=[];
       arr.push({"itemdes":"-----Select-----"});
-      this.querySelector('paper-listbox').style.visibility='visible';
+      this.querySelector('#chequebouncecancelinput1').style.visibility='visible';
       if(e.keyCode==8){
         this.itemflag="true";
         this.itemval="";
         //alert('yes');
         var len=(this.value).length;
         if(len<=1){
-          this.querySelector('paper-listbox').style.visibility='hidden';
+          this.querySelector('#chequebouncecancelinput1').style.visibility='hidden';
           this.itemArray="";
           this.itemval="";
         }
         if(len>1){
-          this.querySelector('paper-listbox').style.visibility='visible';
+          this.querySelector('#chequebouncecancelinput1').style.visibility='visible';
           var backsubval=(((this.value).substring(0,(len-1))).trim()).toUpperCase();
           for(var i=0;i<item.length;i++)
           {
@@ -172,18 +172,27 @@
       }
     },
     FnSelectEnquiry:function(e){
-    this.querySelector('paper-listbox').style.visibility='hidden';
+    this.querySelector('#chequebouncecancelinput1').style.visibility='hidden';
     var enquiry_name = e.target.selectedItem.textContent.trim();
     var admission_no = e.target.selectedItem.value.trim();
     localStorage.setItem("curr_sess_enquiryno",admission_no);
     localStorage.setItem("curr_sess_enquiryname",enquiry_name);
     this.itemArray=[];
-    document.querySelector('#input1').selected=-1;
+    document.querySelector('#chequebouncecancelinput1').selected=-1;
     this.value=enquiry_name;
     this.$.processingservice.processbouncechequeService(admission_no);
     },
     FnSearchbychequeno:function(){
     this.$.processingservice.processbouncechequeService(this.chequeno);
+    },
+    FnRefresh:function(){
+      this.value="";
+      this.querySelector('#chequebouncecancelinput1').style.visibility='hidden';
+      // item=[];
+      allchequesarr=[];
+      cheques=[];
+      this.chequearr=[];
+      this.itemArray=[];
     }
     });
   })();
