--- a/app/elements/chequebounceorcancel-item-card/chequebounceorcancel-item-card.html
+++ b/app/elements/chequebounceorcancel-item-card/chequebounceorcancel-item-card.html
@@ -4,14 +4,21 @@
 <dom-module id="chequebounceorcancel-item-card">
   <template>
     <style>
+    table{
+      width:130%;
+    }
+    td{
+      text-align: left;
+    }
     </style>
     <div>
       <table class="table table-hover" id="collectionreport">
       <thead>
       <tr>
-        <td>{{sno}}</td><td>{{enrno}}</td><td>{{studentname}}</td><td>{{grade}}</td><td>{{installmenttype}}</td><td>{{chequeno}}</td><td>{{bankname}}</td><td>{{paiddate}}</td><td>{{installmentamount}}</td><td><paper-checkbox id="bounce{{sno}}" class="checkbox" on-change="FnBounceHandler" style="margin-top: -1%;"></paper-checkbox></td><td><paper-checkbox id="cancel{{sno}}" class="checkbox" on-change="FnCancelHandler" style="margin-top: -1%;"></paper-checkbox></td>
+        <td>{{sno}}</td><td width="90px" style="text-align: center;">{{enrno}}</td><td width="140px">{{studentname}}</td><td width="80px">{{grade}}</td><td width="150px">{{installmenttype}}</td><td width="120px">{{chequeno}}</td><td width="90px">{{bankname}}</td><td width="90px">{{paiddate}}</td><td width="100px">{{installmentamount}}</td><td><paper-checkbox id="bounce{{sno}}" class="checkbox" on-change="FnBounceHandler" style="margin-top: -1%;"></paper-checkbox></td><td><paper-checkbox id="cancel{{sno}}" class="checkbox" on-change="FnCancelHandler" style="margin-top: -1%;"></paper-checkbox></td>
       </tr>
-      <!-- </thead> -->
+      </thead>
+      </table>
     </div>
   </template>
   <script>
