master report all option

--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -264,7 +264,7 @@
             <a href="" aria-hidden="true" data-target="#feestructurereport" data-backdrop="static" data-keyboard="false" on-click="FnFeeStructureReport">Fee Structure Report</a>
            </li>
            <li id="fee-structure-report">
-            <a href="" aria-hidden="true" data-target="#feestructureforgradereport" data-backdrop="static" data-keyboard="false" on-click="FnFeeStructureForGradeReport">Fee Structure For Grades</a>
+            <a href="" aria-hidden="true" data-target="#feestructureforgradereport" data-backdrop="static" data-keyboard="false" on-click="FnFeeStructureForGradeReport">Studentwise Fee Structure</a>
            </li>
            </ul>
            </li>
