--- a/app/elements/fee-report-service/fee-report-service.html
+++ b/app/elements/fee-report-service/fee-report-service.html
@@ -598,8 +598,8 @@
           arr=[];
           document.querySelector('discount-structure-report').discountarr=arr;
         }
-        document.querySelector('fromdate-icon-pickercard').ready();
-        document.querySelector('todate-icon-pickercard').ready();
+        // document.querySelector('fromdate-icon-pickercard').ready();
+        // document.querySelector('todate-icon-pickercard').ready();
         arr=[];
       } ,
       FnFetchFeeStructureService:function(admissionyear
@@ -707,6 +707,7 @@
       fetchgradewisefeestructureResponse:function(e){
         if(e.detail.response.returnval!='no rows'){
           var feemaster=e.detail.response.returnval;
+          // alert(JSON.stringify(this.allstud));
           // alert(JSON.stringify(feemaster));
           for(var i=0;i<(this.allstud).length;i++){
             var flag=0;
@@ -743,6 +744,7 @@
       },
       fetchstructureallstudentResponse:function(e){
         this.allstud=e.detail.response.returnval;
+        // alert(JSON.stringify(this.allstud));
       },
       FnFetchGradewiseDiscountStructureService:function(admissionyear
           ,academicyear,grade){
