--- a/app/elements/newenquiry-card/newenquiry-card.html
+++ b/app/elements/newenquiry-card/newenquiry-card.html
@@ -100,12 +100,12 @@
           </div>
         </div>
         <div class="lbl"><label>Category </label><p id="mangender">&nbsp; *</p> </div>
-        <div class="col-sm-9 enquiry-input" style='margin-top: 0.5%;'>
+        <!-- <div class="col-sm-9 enquiry-input" style='margin-top: 0.5%;'>
           <template  is="dom-repeat" items="{{discountarr}}" as="view">
           {{view.discount_type_name}}
             <special-discount-card code="{{view.id}}" discountname="{{view.discount_type_name}}"></special-discount-card>
           </template>
-        </div>
+        </div> -->
       </div>
       <div class="list-group col-sm-12 panel-body form-category">
         <div class="col-sm-6" style='margin-top: -1%;'>
