--- a/app/elements/pre-apps-service/pre-apps-service.html
+++ b/app/elements/pre-apps-service/pre-apps-service.html
@@ -445,6 +445,7 @@
         obj.school_area = schoolarea;
         obj.sibling_remark = siblingremark;
         obj.parentorguard=paga;
+        // obj.age=ageofyr;
         // alert(localStorage.getItem("curr_sess_referralid"));
         // if(localStorage.getItem("curr_sess_referralid")=='1'||localStorage.getItem("curr_sess_referralid")=='9'){
         // // alert('come');
