--- a/app/elements/detailed-enquiry-form/detailed-enquiry-form.html
+++ b/app/elements/detailed-enquiry-form/detailed-enquiry-form.html
@@ -64,11 +64,11 @@
         </div>
         <div class="col-sm-9 enquiry-input">
           <label>Category</label>
-          <div style='margin-top: 1%;'>
+          <!-- <div style='margin-top: 1%;'>
           <template  is="dom-repeat" items="{{discountarr}}" as="view">
             <special-discount-card code="{{view.id}}" discountname="{{view.discount_type_name}}"></special-discount-card>
           </template>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="list-group col-sm-12 panel-body form-category">
