--- a/app/elements/enrollment-report/enrollment-report.html
+++ b/app/elements/enrollment-report/enrollment-report.html
@@ -55,6 +55,10 @@
         </div>
     </div>
      <table class="table table-hover" id="ayenrreport">
+      <tr>
+        <th>Enquiry No</th><th>Admission No</th><th>Admission Year</th><th>Academic Year</th><th>First Name</th><th>Middle Name</th><th>Last Name</th><th>Student Name</th><th>Grade</th><th>DOB</th><th>Gender</th><th>Father Name</th><th>Mother Name</th><th>Disabled Student</th><th>Canteen availed</th><th>Transport Availed</th><th>Having Sibling</th><th>Admission Status</th><th>Active Status</th><th>Second Language</th><th>Third Language</th><th>Mother toungue</th><th>Blood Group</th><th>Father Mobile</th>
+        <th>Mother Mobile</th><th>Father Email</th><th>Mother Email</th><th>Aadhar No</th><th>Caste</th><th>Flat No</th><th>Building Name</th><th>Street</th><th>Town</th><th>City</th><th>Pincode</th>
+      </tr>
       <template  is="dom-repeat" items="{{enrollmentarr}}" as="e">
       <tr><td>{{e.enquiry_no}}</td><td>{{e.admission_no}}</td><td>{{e.admission_year}}</td><td>{{e.academic_year}}</td><td>{{e.first_name}}</td><td>{{e.middle_name}}</td><td>{{e.last_name}}</td><td>{{e.student_name}}</td><td>{{e.class_for_admission}}</td><td>{{e.dob}}</td><td>{{e.gender}}</td><td>{{e.father_name}}</td><td>{{e.mother_name}}</td><td>{{e.disabled_stuent}}</td><td>{{e.canteen_availed}}</td><td>{{e.transport_availed}}</td><td>{{e.having_sibling}}</td><td>{{e.admission_status}}</td><td>{{e.active_status}}</td><td>{{e.second_language}}</td><td>{{e.third_language}}</td><td>{{e.mother_toungue}}</td><td>{{e.blood_group}}</td><td>{{e.father_mobile}}</td><td>{{e.mother_mobile}}</td><td>{{e.father_email}}</td><td>{{e.mother_email}}</td><td>{{e.aadhar_no}}</td><td>{{e.caste}}</td><td>{{e.flat_no}}</td><td>{{e.building_name}}</td><td>{{e.street}}</td><td>{{e.town}}</td><td>{{e.city}}</td><td>{{e.pincode}}</td></tr>
       </template> 
