--- a/app/elements/followup-student-detail/followup-student-detail.html
+++ b/app/elements/followup-student-detail/followup-student-detail.html
@@ -44,7 +44,7 @@
         <tr class="list-group col-sm-14 panel-body form-category">
           <th class="col-sm-2" style="text-align:center;">FollowUp No</th>
            <th class="col-sm-3" style="text-align:center;">Call picked Status</th>
-          <th class="col-sm-2" style="text-align:center;">Schedule Date</th>
+          <th class="col-sm-2" style="text-align:center;">Followup Date</th>
           <th class="col-sm-3" style="text-align:center;">Next Followup</th>
          <th class="col-sm-3" style="text-align:center;">Status</th>
         </tr>
