--- a/app/elements/fees-card/fees-card.html
+++ b/app/elements/fees-card/fees-card.html
@@ -820,14 +820,14 @@
       // this.$.admissionservice.searchfeeadmissioninfoService(localStorage.getItem("curr_sess_enquiryno"));
     },
     FnSetDisableFlag:function(flag){
-      if(flag==true){
-        this.payablepaidflag="Paid Amount";
-      }
-      else{
+      // if(flag==true){
+      //   this.payablepaidflag="Paid Amount";
+      // }
+      // else{
         this.payablepaidflag="Payable Amount";
-      }
+      // }
       this.disableflag=flag;
-      this.hiddenaddbtn=flag; 
+      // this.hiddenaddbtn=flag; 
     }
 
     });
