--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -239,3 +239,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="attachdiscount-itemcard/attachdiscount-itemcard.html">
 <link rel="import" href="general-icon-datepicker/general-icon-datepicker.html">
 <link rel="import" href="pdc-icon-fromdatepicker/pdc-icon-fromdatepicker.html">
+<link rel="import" href="datepicker-icon-card/datepicker-icon-card.html">
