--- a/app/elements/admission-service/admission-service.html
+++ b/app/elements/admission-service/admission-service.html
@@ -1289,6 +1289,7 @@ insertstudenthistoryResponse:function(e){
         obj.referraltype=localStorage.getItem("curr_sess_referralid");  
         // obj.noofinstallment=localStorage.getItem("curr_sess_noofinstallment");
         obj.schoolid=localStorage.getItem("schoolid");     
+        obj.mode=localStorage.getItem("curr_sess_paymentthrough");
         this.fetchdiscountparam=obj; 
         // alert(JSON.stringify(obj));      
         this.$.fetchdiscountajax.generateRequest();
