date cheque edit report

--- a/app/elements/fees-service/fees-service.html
+++ b/app/elements/fees-service/fees-service.html
@@ -980,6 +980,7 @@
         feechequecount=0;
         feetransfercount=0;
         arr=[];
+        localStorage.setItem("curr_sess_discountfeetype","");
       },
       FnSetSplitup:function(splitarr){
         this.splitarr=splitarr;
