--- a/app/elements/fee-report-service/fee-report-service.html
+++ b/app/elements/fee-report-service/fee-report-service.html
@@ -194,8 +194,18 @@
         if(arr!='no rows'){
         for(var i=0;i<arr.length;i++){
           arr[i].sno=i+1;
-          arr[i].fine_amount=0;
-          totalamount=parseFloat(parseFloat(totalamount)+parseFloat(arr[i].installment_amount)).toFixed(2);
+          if(arr[i].cheque_no==""||arr[i].cheque_no==null||arr[i].cheque_no=="null"){
+
+          }
+          else{
+          if((arr[i].cheque_no).indexOf(0)=='0')
+          {
+            arr[i].cheque_no="`"+arr[i].cheque_no;
+          }
+          }
+          // arr[i].fine_amount=0;
+          // alert(JSON.stringify(arr[i].cheque_no));
+          totalamount=parseFloat(parseFloat(totalamount)+parseFloat(arr[i].installment_amount)+parseFloat(arr[i].fine_amount)).toFixed(2);
         }
         }
         else{
